--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,9 +18,9 @@
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
+				<li><a id="no-underline" href="./index.html"> projets</a></li>
 				<li>contact</li>
-				<li>login</li>
+				<li><a id="no-underline" href="./login.html">login</a> </li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
