--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
 			<ul>
 				<li><a id="no-underline" href="./index.html"> projets</a></li>
@@ -24,16 +24,16 @@
 		</nav>
     </header>
     <main>
-        <div class="login">
             <h2>Log In</h2>
-            <form id="contact" method="post">
+            <div id="contact">
+            <form method="POST">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password">
+                <input type="submit" value="Se connecter" class="connect">
             </form>
         </div>
-        <input type="submit" value="Se connecter" class="connect">
         <a href="#">Mot de passe oublié</a>
     </main>
 
@@ -45,7 +45,7 @@
 			</ul>
 		</nav>
 	</footer>
-
+    <script type="module" src="./login.js"></script>
 </body>
 
 </html>
