login et logout finis
mise en place de la modale et des btns editions au login

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,32 +20,44 @@
 
 <body>
 	<div class="banner">
-		<div class="mode-edition">
-			<img class="edition-white" src="./assets/icons/edition-white.svg" alt="edition">
-			<div class="modal-btn-white">Mode édition</div>
+		<div class="mode-edition-top">
+			<img class="logo-top" src="./assets/icons/edition-white.svg" alt="edition">
+			<div class="text-top">Mode édition</div>
+			<button type="submit" class="publish"> publiez les changements </button>
 		</div>
-		<button class="publish">publier les changements</button>
-
 	</div>
 
 	<div class="modal-container">
-
 		<div class="modal">
 			<button class="close-modal modal-trigger"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
 			</button>
 			<h1 id="modalTitle">Galerie photo</h1>
+			<div class="projets-photos"></div>
+			<div class="trait-container">
 			<div class="trait"></div>
-			<input type="submit" value="Ajouter une photo">
+			</div>
+			<button class="addpicture">Ajouter une photo</button>
+			<p class="delete-gallery">Supprimer la galerie</p>
 		</div>
 	</div>
+
+	<!-- <div class="modal-container2">
+		<div class="modal2">
+			<button class="close-modal2 modal-trigger2"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
+			</button>
+			<h1 id="modalTitle2">Ajout photo</h1>
+			<div class="trait"></div>
+			<input type="submit" value="Valider">
+		</div>
+	</div> -->
 
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li><a id="no-underline" href="./index.html"> projets</a></li>
-				<li>contact</li>
-				<li><a id="no-underline" href="./login.html">login</a> </li>
+				<li><a id="no-underline" href="#portfolio"> projets</a></li>
+				<li><a id="no-underline" href="#contact"> contact</li>
+				<li><a id="no-underline" class="log" href="./login.html">login</a> </li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
@@ -54,17 +66,13 @@
 	<main>
 		<section id="introduction">
 			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="">
-				<div class="mode-edition">
-					<img class="edition-black" src="./assets/icons/edition-black.svg" alt="edition">
+				<img class="girl-picture" src="./assets/images/sophie-bluel.png" alt="">
+				<div class="modifier-container">
+					<img class="logo-black" src="./assets/icons/edition-black.svg" alt="edition">
 					<div class="modifier">modifier</div>
 				</div>
 			</figure>
 			<article>
-				<div class="mode-edition">
-					<img class="edition-black" src="./assets/icons/edition-black.svg" alt="edition">
-					<div class="modifier">modifier</div>
-				</div>
 				<h2>Designer d'espace</h2>
 				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
 					finale du chantier.</p>
@@ -76,13 +84,13 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<div class="project">
-			<h2>Mes Projets</h2>
-			<div class="mode-edition">
-				<img class="edition-black modal-trigger" src="./assets/icons/edition-black.svg" alt="edition">
-				<div class="modifier  modal-trigger">modifier</div>
+			<div class="projets-container">
+				<h2>Mes Projets</h2>
+				<div class="modifier-projets-container">
+					<img class="logo-black modal-trigger" src="./assets/icons/edition-black.svg" alt="edition">
+					<div class="modifier  modal-trigger">modifier</div>
+				</div>
 			</div>
-		</div>
 			<div class="allBtn">
 				<button class="btn active"> Tous </button>
 			</div>
