--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -24,17 +24,19 @@
 		</nav>
     </header>
     <main>
-            <h2>Log In</h2>
+            <h2 class="login-title">Log In</h2>
             <div id="contact">
             <form method="POST">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password">
+                </br> </br><p class="erreur-msg"></p>
                 <input type="submit" value="Se connecter" class="connect">
             </form>
         </div>
-        <a href="#">Mot de passe oublié</a>
+        <a class="mdp" href="#">Mot de passe oublié</a>
+
     </main>
 
     
