--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -32,7 +32,7 @@
 			<button class="close-modal modal-trigger"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
 			</button>
 			<h1 id="modalTitle">Galerie photo</h1>
-			<div class="projets-photos"></div>
+			<div class="img-container"></div>
 			<div class="trait-container">
 			<div class="trait"></div>
 			</div>
