--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,6 +19,54 @@
 </head>
 
 <body>
+
+	<div class="modal-container">
+		<div class="modal">
+			<button class="modal-close"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
+			</button>
+			<div id="modalTitle">Galerie photo</div>
+			<div class="img-container"></div>
+			<div class="trait-container">
+				<div class="trait"></div>
+			</div>
+			<button class="addpicture">Ajouter une photo</button>
+			<p class="delete-gallery">Supprimer la galerie</p>
+		</div>
+	</div>
+
+	<div class="modal-container2">
+		<div class="modal2">
+			<button class="arrowback"> <img class="arrowback" src="./assets/icons/Arrow_Back.svg" alt="cross">
+			</button>
+			<button class="modal-close"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
+			</button>
+			<div id="modalTitle">Ajout photo</div>
+			<div class="ajout-picture preview-image">
+				<img src="./assets/icons/picture.svg" alt="picture">
+				<label class="addpic" for="addPic">+ Ajouter photo</label>
+				<input class="btn-hidden" type="file" id="addPic" name="addPic" accept="jpg, png">
+				<p>jpg, png : 4mo max</p>
+			</div>
+			<div class="form-container">
+				<form method="post">
+					<label for="title">Titre</label>
+					<input type="text">
+					<label for="category">Catégorie</label>
+					<select id="category" name="category">
+						<option value=""></option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+					</select>
+				</form>
+			</div>
+			<div class="trait-container">
+				<div class="trait"></div>
+			</div>
+			<button class="valider">Valider</button>
+		</div>
+	</div>
+
 	<div class="banner">
 		<div class="mode-edition-top">
 			<img class="logo-top" src="./assets/icons/edition-white.svg" alt="edition">
@@ -26,30 +74,6 @@
 			<button type="submit" class="publish"> publiez les changements </button>
 		</div>
 	</div>
-
-	<div class="modal-container">
-		<div class="modal">
-			<button class="close-modal modal-trigger"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
-			</button>
-			<h1 id="modalTitle">Galerie photo</h1>
-			<div class="img-container"></div>
-			<div class="trait-container">
-			<div class="trait"></div>
-			</div>
-			<button class="addpicture">Ajouter une photo</button>
-			<p class="delete-gallery">Supprimer la galerie</p>
-		</div>
-	</div>
-
-	<!-- <div class="modal-container2">
-		<div class="modal2">
-			<button class="close-modal2 modal-trigger2"> <img class="cross" src="./assets/icons/cross.svg" alt="cross">
-			</button>
-			<h1 id="modalTitle2">Ajout photo</h1>
-			<div class="trait"></div>
-			<input type="submit" value="Valider">
-		</div>
-	</div> -->
 
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -87,8 +111,8 @@
 			<div class="projets-container">
 				<h2>Mes Projets</h2>
 				<div class="modifier-projets-container">
-					<img class="logo-black modal-trigger" src="./assets/icons/edition-black.svg" alt="edition">
-					<div class="modifier  modal-trigger">modifier</div>
+					<img class="logo-black modal-open" src="./assets/icons/edition-black.svg" alt="edition">
+					<div class="modifier  modal-open">modifier</div>
 				</div>
 			</div>
 			<div class="allBtn">
