--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,20 +51,21 @@
 			<div class="form-container">
 				<form method="post">
 					<label for="title">Titre</label>
-					<input type="text">
+					<input class="title" type="text">
 					<label for="category">Catégorie</label>
-					<select id="category" name="category">
+					<select class="category" id="category" name="category">
 						<option value=""></option>
-						<option value="1">1</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
+						<option id="1" class="selectcategory">Objets</option>
+						<option id="2"class="selectcategory">Appartements</option>
+						<option id="3" class="selectcategory">Hotels & Restaurants</option>
 					</select>
 				</form>
 			</div>
 			<div class="trait-container">
 				<div class="trait"></div>
 			</div>
-			<button class="valider">Valider</button>
+			<button type="submit" class="valider">Valider</button>
+			<p class="msg-error"></p>
 		</div>
 	</div>
 
