--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -16,9 +16,9 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
 			<ul>
-				<li><a id="no-underline" href="./index.html"> projets</a></li>
+				<li><a class="no-underline" href="./index.html"> projets</a></li>
 				<li>contact</li>
-				<li><a id="no-underline" href="./login.html">login</a> </li>
+				<li><a class="no-underline" href="./login.html">login</a> </li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
@@ -31,7 +31,7 @@
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password">
-                </br> </br><p class="erreur-msg"></p>
+                <br> <br><p class="erreur-msg"></p>
                 <input type="submit" value="Se connecter" class="connect">
             </form>
         </div>
